# image-builder

./: .gitignore  Cargo.toml  README.md
src/: colors.rs  image.rs  lib.rs  main.rs  picture.rs  rect.rs  text.rs
