[package]
name = "image-builder"
version = "0.1.2"
author = "Jefferson Carlos"
edition = "2021"
description = "A tool for mount images with texts"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
imageproc = "0.23.0"
rusttype = "0.9.3"
