[package]
name = "image-builder"
version = "0.5.2"
edition = "2021"
description = "Image Builder is a high-level library that uses the image crate as the engine to generate PNG images, but with convenience and simplicity."
license = "MIT"

authors = ["Jefferson Carlos"]
readme = "README.md"

# crates.io metadata
documentation = "https://docs.rs/image-builder"
repository = "https://github.com/jeffersoncbd/image-builder"
homepage = "https://github.com/jeffersoncbd/image-builder"

[dependencies]
image = "0.24.5"
imageproc = "0.23.0"
rusttype = "0.9.3"
